--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <body>
-      <title>магазин кактусов</title>
+        <head><title>магазин кактусов</title>
+        <link href="style.css" type="text/css" rel="stylesheet"></head>
         <header>
             <table>
                 <tr>
