--- a/index1.html
+++ b/index1.html
@@ -1,5 +1,10 @@
 <html>
     <body>
+        <head>
+        <title>Ассортимент магазина</title>
+        <link href="style1.css" type="text/css" rel="stylesheet">
+            
+        </head>
         <header>
                 <table>
                 <tr>
