--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
             <table>
                 <tr>
                     <td><img src="https://github.com/JopraArarat/Project1/blob/main/%D0%BA%D0%B0%D0%BA1.png?raw=true"></td>
-                    <td><a href="">Главная</a></td>
-                    <td><a href="">Ассортимент</a></td>
+                    <td><a href="https://jopraararat.github.io/Project1/">Главная</a></td>
+                    <td><a href="index1">Ассортимент</a></td>
                 </tr>
             </table>
         </header>
