--- a/index1.html
+++ b/index1.html
@@ -22,7 +22,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td><img src="https://github.com/JopraArarat/Project1/blob/main/%D0%BE%D1%811.png?raw=true"><br/><p>Acanthocalycium</p></td>
+                    <td style="border-right:100px Solid #65A5D1"><img src="https://github.com/JopraArarat/Project1/blob/main/%D0%BE%D1%811.png?raw=true"><br/><p>Acanthocalycium</p></td>
                     <td><img src="https://github.com/JopraArarat/Project1/blob/main/%D0%BE%D1%812.png?raw=true"><br/><p>Escobaria</p></td>
                 </tr>
                 <tr>
