--- a/index1.html
+++ b/index1.html
@@ -26,7 +26,7 @@
                     <td><img src="https://github.com/JopraArarat/Project1/blob/main/%D0%BE%D1%812.png?raw=true"><br/><p>Escobaria</p></td>
                 </tr>
                 <tr>
-                    <td><img src="https://github.com/JopraArarat/Project1/blob/main/%D0%BE%D1%813.png?raw=true"><br/><p>Krainzia</p>
+                    <td style="border-right:100px Solid #65A5D1"><img src="https://github.com/JopraArarat/Project1/blob/main/%D0%BE%D1%813.png?raw=true"><br/><p>Krainzia</p>
                     </td>
 
                     <td><img src="https://github.com/JopraArarat/Project1/blob/main/%D0%BE%D1%814.png?raw=true"><br/><p>Setiechinopsis</p>
